tweaks for mobile

--- a/Website/src/index.html
+++ b/Website/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="We're getting married!">
+  <meta name="author" content="Designed by Michaela and coded by Gavin.">
   <!-- <link rel="icon" href="../../favicon.ico"> -->
 
   <title>Gavin &amp; Michaela</title>
@@ -192,9 +192,9 @@
       <h2>Registry</h2>
       <p>We are registered online at crowdrise.com as well as Bed, Bath &amp; Beyond and Target.</p>
       <div class="actionbuttons">
-        <a href="#">Crowdrise</a>
-        <a href="#">Bed, Bath &amp; Beyond</a>
-        <a href="#">Target</a>
+        <a target="_blank" href="https://www.crowdrise.com/MichaelaandGavin/fundraiser/">Crowdrise</a>
+        <a target="_blank" href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&amp;eventType=Wedding&amp;registryId=541297500&amp;pwsurl=">Bed, Bath &amp; Beyond</a>
+        <a target="_blank" href="http://www.target.com/GiftRegistrySearchViewCmd?registryType=WD&amp;jsRequest=true&amp;catalogId=10051&amp;status=completePage&amp;cumulativeTime=-1&amp;listId=EFOcEVq569zN76D1kk7CqA&amp;noOfPings=&amp;registryFirstName=michaela&amp;langId=-1&amp;segmentGrpName=-1&amp;storeId=10151&amp;registryLastName=fernen">Target</a>
       </div>
     </div>
 
